--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,6 @@ repositories {
 }
 
 dependencies {
-  compile 'com.facebook.react:react-native:0.18.+'
+  compile 'com.facebook.react:react-native:0.30.0'
   compile 'com.paypal.sdk:paypal-android-sdk:2.13.0'
 }
